# LexAd

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  requirements.txt  start-dev.bat  stop-dev.bat
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 294f05fbf95c_add_brands_and_material_brand_id.py  7c2d9a4e6f81_v0_6_2_admin_controls.py  9e4f1a2c7b30_v0_4_1_review_task_status.py  a4b7d1c6e825_review_submission_snapshots.py  b8d4e1f7a203_v0_7_1_version_and_brand_industries.py  bedaa881e856_v0_3_0_initial.py  c7f4a8b9d012_v0_4_2_knowledge_foundation.py  c9e7a1b4d2f0_v0_7_2_review_scores.py  d8a1f0e3b5c6_v0_5_0_archived_materialstatus.py  f3a8c2d9e714_v0_5_1_conditional_approval.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: competition_guard.py  config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/crud/: placeholder.py
backend/app/db/: base.py  seed.py  session.py  url.py
backend/app/engine/: chroma_setup.py  industry.py  layer1_hard_rules.py  layer2_semantic.py  layer4_platform.py  pipeline.py  preprocess_l1.py  preprocess_l5.py  public_opinion.py  text_similarity.py
backend/app/integrations/: placeholder.py
backend/app/models/: __init__.py  admin.py  brand.py  knowledge.py  material.py  review.py  user.py
backend/app/permissions/: placeholder.py
backend/app/schemas/: __init__.py  admin.py  admin_knowledge.py  brand.py  knowledge.py  material.py  (+4 more)
backend/scripts/: validate_materials.py  validation_report.csv  物料1-65.xlsx
(+1414 files in other folders)
