[project]
name = "lexad-backend"
version = "0.7.1"
description = "LexAd advertising compliance review platform — backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "pyahocorasick>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
